@@ -13,6 +13,8 @@ git-annex (5.20140108) UNRELEASED; urgency=medium
     environment. This typically resulted in git-annex branch log files being
     committed to the master branch and later showing up in the work tree.
     (These log files can be safely removed.)
+  * assistant: Detect if .git/annex/index is corrupt at startup, and
+    recover.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 08 Jan 2014 13:13:54 -0400
 
